--- a/projects/angular-editor-app/src/index.html
+++ b/projects/angular-editor-app/src/index.html
@@ -19,7 +19,7 @@
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet" />
     </head>
-    <body class="mat-typography bookerly">
+    <body class="mat-typography">
         <app-root></app-root>
     </body>
 </html>
